Decrease display font size to prevent overflow

--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-size: 3.5rem;
+  font-size: 3.3rem;
   height: 100px;
   padding-right: 12px;
   color: #fff;
